--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>net.siegmar.billomat4j</groupId>
         <artifactId>billomat4j-parent</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <groupId>net.siegmar.billomat4j</groupId>
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>net.siegmar.billomat4j</groupId>
             <artifactId>billomat4j-sdk</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
