--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <artifactId>billomat4j-parent</artifactId>
     <packaging>pom</packaging>
 
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
 
     <scm>
         <connection>scm:git:git://github.com/osiegmar/billomat4j.git</connection>
