--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
     <artifactId>billomat4j-parent</artifactId>
     <packaging>pom</packaging>
 
-    <version>1.0.3</version>
+    <version>1.0.4-SNAPSHOT</version>
 
     <scm>
         <connection>scm:git:git://github.com/osiegmar/billomat4j.git</connection>
         <developerConnection>scm:git:git@github.com:osiegmar/billomat4j.git</developerConnection>
         <url>https://github.com/osiegmar/billomat4j.git</url>
-      <tag>v1.0.3</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <description>Software Development Kit for Billomat's Web-API. See http://www.billomat.com/ for further information.</description>
