--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>net.siegmar.billomat4j</groupId>
         <artifactId>billomat4j-parent</artifactId>
-        <version>1.0.3-SNAPSHOT</version>
+        <version>1.0.3</version>
     </parent>
 
     <groupId>net.siegmar.billomat4j</groupId>
