--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'maven'
 
 group = 'net.siegmar.billomat4j'
 archivesBaseName = 'billomat4j-sdk'
-version = '1.0.5'
+version = '1.0.6-SNAPSHOT'
 
 sourceCompatibility = 1.7
 
