--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'signing'
 
 group = 'de.siegmar'
 archivesBaseName = 'billomat4j'
-version = '1.1.2'
+version = '1.1.3-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
@@ -18,8 +18,8 @@ repositories {
 
 dependencies {
     compile('org.apache.commons:commons-lang3:3.4')
-    compile('com.fasterxml.jackson.core:jackson-databind:2.7.4')
-    compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.7.4')
+    compile('com.fasterxml.jackson.core:jackson-databind:2.6.5')
+    compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.5')
     compile('org.slf4j:slf4j-api:1.7.21')
     testCompile('ch.qos.logback:logback-classic:1.1.7')
     testCompile('commons-io:commons-io:2.5')
