--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'signing'
 
 group = 'de.siegmar'
 archivesBaseName = 'billomat4j'
-version = '1.1.3-SNAPSHOT'
+version = '1.1.3'
 
 sourceCompatibility = 1.8
 
