--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = 'de.siegmar'
-version = '1.1.3'
+version = '2.0.0-SNAPSHOT'
 
 java {
     toolchain {
@@ -22,15 +22,15 @@ repositories {
 }
 
 dependencies {
-    implementation('org.apache.commons:commons-lang3:3.4')
-    implementation('com.fasterxml.jackson.core:jackson-databind:2.6.5')
-    implementation('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.5')
-    implementation('org.slf4j:slf4j-api:1.7.21')
+    implementation 'org.apache.commons:commons-lang3:3.4'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.10.7'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.10'
+    implementation 'org.slf4j:slf4j-api:1.7.21'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.5.2'
-    testImplementation('ch.qos.logback:logback-classic:1.1.7')
-    testImplementation('commons-io:commons-io:2.5')
+    testImplementation 'ch.qos.logback:logback-classic:1.1.7'
+    testImplementation 'commons-io:commons-io:2.5'
 }
 
 processResources {
