--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
             <version>2.9.10</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j:slf4j-api</groupId>
+            <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.21</version>
         </dependency>
