schedule once per week

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,9 +1,8 @@
 name: integration test
 
 on:
-  push:
-    paths-ignore:
-      - '**/*.md'
+  schedule:
+    - cron:  '0 6 * * 7'
 
 jobs:
   build:
