--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.siegmar</groupId>
     <artifactId>billomat4j</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <dependencies>
         <dependency>
             <groupId>org.apache.commons</groupId>
