--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -10,12 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Java 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
-        distribution: 'adopt'
+        distribution: 'temurin'
         java-version: '11'
+    - uses: gradle/gradle-build-action@v2
     - name: Build with Gradle
       env:
         BILLOMAT_ID: ${{ secrets.BILLOMAT_ID }}
