--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,13 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     id 'signing'
-    id 'checkstyle'
+    //id 'checkstyle'
     id 'com.github.spotbugs' version '4.5.0'
     id 'idea'
 }
 
 group = 'de.siegmar'
-version = '2.0.1'
+version = '3.0.0-SNAPSHOT'
 
 java {
     toolchain {
