--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     id 'signing'
-    //id 'checkstyle'
+    id 'checkstyle'
     id 'com.github.spotbugs' version '4.5.0'
     id 'idea'
 }
